--- a/inflection.html
+++ b/inflection.html
@@ -2,97 +2,7 @@
 <html>
 <head>
   <title>inflection-production-model</title>
-  <style type="text/css">
-/*    * {
-      border: 1px solid red;
-    }*/
-    .flashcard {
-      max-width: 400px;
-      margin: auto;
-    }
-    /* select all direct children of the specified type
-    to give them a unified spacing and centering */
-    .flashcard > div,
-    .flashcard > p {
-      margin: 50px 0 50px 0; /* top right bottom left */
-      text-align: center;
-    }
-    .img-carousel,
-    .action-bar {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-    .word {
-      font-size: 1.5em;
-    }
-    .audio-pronunciation {
-      text-decoration: none;
-    }
-    .audio-icon {
-      width: 15px;
-      height: 15px;
-    }
-/*    .song-translation {
-      display: flex;
-      justify-content: space-around;
-    }*/
-    /* the 'hint:' buttons should be unobstrusive */
-    .btn-translation,
-    .btn-song-translation {
-      background: none;
-      font-size: 1em;
-      font: inherit;
-      border: none;
-      margin: none;
-      /* gray, yo! */
-      color: lightgray;
-    }
-    .word-translation,
-    .song-translation {
-      /* when studying the flashcard, the translation fields should be hidden
-      and only come up when the user clicks 'hint:' */
-      color: lightgray;
-      /*visibility: hidden;*/
-    }
-    .song-line,
-    .song-translation {
-      font-style: italic;
-    }
-    .user-notes {
-      width: 100%;
-    }
-    /* when adding words to the flashcard deck, this should be a carousel,
-    on the actual flashcard it would display only the image the user picked. */
-    .focus-image {
-      width: 200px;
-      height: 200px;
-    }
-    /* nav arrows only when picking the image, not on the final flashcard */
-    .img-nav {
-      width: 24px;
-      height: 24px;
-      align-self: center;
-    }
-    /* move the hint: field closer to the cloze-deletion sentence,
-    in order to take focus off the translation. */
-    .translation,
-    .song-translation {
-      margin: 0 0 0 0 !important;
-    }
-    .cloze,
-    .song-line {
-      margin: 50px 0 5px 0 !important;
-    }
-    .word-translation,
-    .input-song-translation {
-      /* should be adaptable to the size of the current word */
-      width: 80px;
-    }
-    textarea {
-      margin: 50px 0 0 0;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
   <div class="flashcard">
@@ -100,11 +10,11 @@
     on the actual flashcard it would display only the image the user picked. -->
     <div class="img-carousel">
     <!-- the IMAGE should be optional for this card type -->
-      <img class="img-nav" src="Chevron_left.svg">
+      <img class="img-nav" src="img/Chevron_left.svg">
       <div class="img-container">
-        <img class="focus-image" src="image.png">
+        <img class="focus-image" src="img/image.png">
       </div>
-      <img class="img-nav" src="Chevron_right.svg">
+      <img class="img-nav" src="img/Chevron_right.svg">
     </div>
     <p class="cloze">
       la la la la ____ line.
@@ -124,10 +34,19 @@
       <!-- a short definition in the target language (get it from http://www.wordreference.com/) -->
       easy definition
     </p>
-    <hr>
+<!-- ######################################################################################## -->
+    <hr> <!-- SWITCH FROM FRONT TO BACK -->
+<!-- ######################################################################################## -->
     <div class="word">
-      <a class="audio-pronunciation" href="">original word <img class="audio-icon" src="audio.png"></a>
+      <a class="audio-pronunciation" href="">original word <img class="audio-icon" src="img/audio.png"></a>
     </div>
+    <div class="word">
+      <a class="audio-pronunciation" href="">base word <img class="audio-icon" src="img/audio.png"></a>
+    </div>
+    <p>
+      <a class="audio-pronunciation" href="">original word <img class="audio-icon" src="img/audio.png"></a>,&nbsp;
+      part-of-speech
+    </p>
     <p class="song-line">
       la la la la song line.
     </p>
@@ -136,8 +55,13 @@
       <button class="btn-song-translation">hint:</button>
       <input class="input-song-translation" placeholder="translated song line.">
     </div>
+    <p class="definition">
+      <!-- a short definition in the target language (get it from http://www.wordreference.com/) -->
+        a more elaborate, dictionary-style definition that says it all!
+    </p>
     <!-- if the user wants to add additional information to better remember he/she can do so here -->
     <textarea class="user-notes" rows="3" placeholder="Optional: Enter notes"></textarea>
+
     <div class="action-bar">
       <button>Cancel</button>
       <button>Add</button>
