--- a/word_1.html
+++ b/word_1.html
@@ -2,93 +2,7 @@
 <html>
 <head>
   <title>word_1</title>
-  <style type="text/css">
-    .flashcard {
-      max-width: 400px;
-      margin: auto;
-    }
-    /* select all direct children of the specified type
-    to give them a unified spacing and centering */
-    .flashcard > div,
-    .flashcard > p {
-      margin: 50px 0 50px 0; /* top right bottom left */
-      text-align: center;
-    }
-    .img-carousel,
-    .action-bar {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-    .word {
-      font-size: 1.5em;
-    }
-    .audio-pronunciation {
-      text-decoration: none;
-    }
-    .audio-icon {
-      width: 15px;
-      height: 15px;
-    }
-    /* the 'hint:' buttons should be unobstrusive */
-    .btn-translation,
-    .btn-song-translation {
-      background: none;
-      font-size: 1em;
-      font: inherit;
-      border: none;
-      margin: none;
-      /* gray, yo! */
-      color: lightgray;
-    }
-    .word-translation,
-    .song-translation {
-      /* when studying the flashcard, the translation fields should be hidden
-      and only come up when the user clicks 'hint:' */
-      color: lightgray;
-      /*visibility: hidden;*/
-    }
-    .song-line,
-    .song-translation {
-      font-style: italic;
-    }
-    .user-notes {
-      width: 100%;
-    }
-    /* when adding words to the flashcard deck, this should be a carousel,
-    on the actual flashcard it would display only the image the user picked. */
-    .focus-image {
-      width: 200px;
-      /*height: 200px;*/
-    }
-    /* nav arrows only when picking the image, not on the final flashcard */
-    .img-nav {
-      width: 24px;
-      height: 24px;
-      align-self: center;
-    }
-    /* move the hint: field closer to the cloze-deletion sentence,
-    in order to take focus off the translation. */
-    .translation,
-    .song-translation {
-      margin: 0 0 0 0 !important;
-    }
-    .cloze,
-    .song-line {
-      margin: 50px 0 5px 0 !important;
-    }
-    .word-translation {
-      /* should be adaptable to the size of the current word */
-      width: 25px;
-    }
-    .input-song-translation {
-      /* should be adaptable to the size of the current word */
-      width: 230px;
-    }
-    textarea {
-      margin: 50px 0 0 0;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
   <div class="flashcard">
@@ -96,11 +10,11 @@
     on the actual flashcard it would display only the image the user picked. -->
     <div class="img-carousel">
     <!-- the IMAGE should be optional for this card type -->
-      <img class="img-nav" src="Chevron_left.svg">
+      <img class="img-nav" src="img/Chevron_left.svg">
       <div class="img-container">
         <img class="focus-image" src="http://3.bp.blogspot.com/-dwhTwnymC50/U4i-9XZSl9I/AAAAAAAAAHI/nkWK0l4bBtM/s1600/decir_espanol.jpg">
       </div>
-      <img class="img-nav" src="Chevron_right.svg">
+      <img class="img-nav" src="img/Chevron_right.svg">
     </div>
     <p class="cloze">
       Tú me ______ que no es cierto que te mueres por mí
@@ -122,7 +36,7 @@
     </p>
     <hr>
     <div class="word">
-      <a class="audio-pronunciation" href="">dices <img class="audio-icon" src="audio.png"></a>
+      <a class="audio-pronunciation" href="">dices <img class="audio-icon" src="img/audio.png"></a>
     </div>
     <p class="song-line">
       Tú me dices que no es cierto que te mueres por mí
